--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           ref: ${{ inputs.ref }}
           path: ${{ env.repo_dir }}
@@ -48,7 +48,7 @@ jobs:
         working-directory: ${{ env.src_dir }}
 
       - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: vrchat-content-manager-app-${{ matrix.rid }}
           path: |
@@ -56,7 +56,64 @@ jobs:
             !${{ env.output_dir }}/**/*.pdb
 
       - name: Upload PDB
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: vrchat-content-manager-app-${{ matrix.rid }}-pdb
           path: ${{ env.output_dir }}/**/*.pdb
+
+  make-nsis-windows-installer:
+    needs: build
+    runs-on: windows-latest
+
+    env:
+      repo_dir: ${{ github.workspace }}/repo
+      installer_working_dir: ${{ github.workspace }}/repo/distribution/windows-installer
+      installer_script: installer.nsi
+      installer_output_name: vrchat-content-manager-installer.exe
+      artifact_dir: ${{ github.workspace }}/artifacts
+      executable_name: VRChatContentManager.App.exe
+
+    steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v7
+        with:
+          name: vrchat-content-manager-app-win-x64
+          path: ${{ env.artifact_dir }}
+
+      - name: Get Version Info
+        id: get-version-info
+        shell: powershell
+        working-directory: ${{ env.artifact_dir }}
+        run: |
+          "product-version=" + (ls ${{ env.executable_name }} | % versioninfo | % ProductVersion) >> $GITHUB_OUTPUT
+          "file-version=" + (ls ${{ env.executable_name }} | % versioninfo | % FileVersion) >> $GITHUB_OUTPUT
+
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.ref }}
+          path: ${{ env.repo_dir }}
+
+      - name: Install NSIS
+        shell: powershell
+        working-directory: ${{ runner.temp }}/install-nsis
+        run: |
+          iwr -useb get.scoop.sh -outfile 'install.ps1'
+          .\install.ps1 -RunAsAdmin
+          scoop update
+          scoop bucket add extras
+          scoop install nsis
+
+      - name: Create NSIS Installer
+        shell: powershell
+        working-directory: ${{ env.installer_working_dir }}
+        env:
+          INSTALLER_DISPLAY_VERSION: ${{ steps.get-version-info.outputs.product-version }}
+          INSTALLER_OLD_CLASSIC_VERSION: ${{ steps.get-version-info.outputs.file-version }}
+        run: makensis ${{ env.installer_script }}
+
+      - name: Upload Installer Artifact
+        uses: actions/upload-artifact@v6
+        with:
+          name: vrchat-content-manager-app-win-x64-installer
+          path: ${{ env.installer_working_dir }}/${{ env.installer_output_name }}
